SONAR-12802 SONAR-12927 Fix moved file detection for cobol and when calculating new lines